feat: implementa autenticação (JWT)